--- a/src/scss/components/_fieldset.scss
+++ b/src/scss/components/_fieldset.scss
@@ -1,6 +1,6 @@
-/* `component`
+/* `fieldset`
 -------------------------------------------------- */
 
-.component {
-  /* Component Styles */
+.fieldset {
+  border: 0;
 }
