--- a/src/_includes/layouts/page.html
+++ b/src/_includes/layouts/page.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
+
+  <!--  Meta  -->
+  <meta charset="UTF-8" />
+  <title>Web Components: Forms</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{ title }}</title>
+
+  <!--  Styles  -->
   <link href="{{ 'css/main.css' | url }}" rel="stylesheet">
 </head>
+
 <body>
-  {% block content %}{% endblock %}
+
+  <!-- wrapper -->
+  <div class="wrapper">
+    <div class="card">
+      <div class="card__segment">
+        <form>
+          {% block content %}{% endblock %}
+        </form>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
