--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -10,7 +10,16 @@
 @import "typography";
 
 /* Components */
-@import "components/component";
+ @import "components/button";
+ @import "components/card";
+ @import "components/checkbox";
+ @import "components/fieldset";
+ @import "components/form-group";
+ @import "components/input";
+ @import "components/label";
+ @import "components/radio-group";
+ @import "components/select";
+ @import "components/wrapper";
 
 /* Utilities */
  @import "utilities/margin";
