--- a/src/layouts/page.html
+++ b/src/layouts/page.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!--  Styles  -->
-  <link href="{{ 'css/main.css' | url }}" rel="stylesheet">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 
 <body>
